Release Notes

* 7/30/2015
  * fixed AtlasPJB to check inactive sites with nActivated>0

* 7/30/2015
  * changed AtlasPJB to avoid inactive sites for job.prio>=900

* 7/16/2015
  * changed AtlasPJB to avoid slow sites for job.prio>=900

* 7/14/2015
  * sending scouts to sites where walltime is more than 24h

* 7/13/2015
  * fixed getSubChunk to correctly take secondary files into account

* 7/10/2015
  * changed cpuTime for scouts to always update the value
  * changed walltime messages more informative

* 7/9/2015
  * added job cloning
  * added message to errorDialog when goal is reached

* 7/8/2015
  * fixed retryTask to reset picked files
  * setting amiFlag
  * changed goal to have the first decimal place
  * changed child tasks not to go done when parents are not done
  * fixed reactivatePendingTasks to timeout child tasks correctly
  * increased upper limit of outdiskcount to 10MB

* 7/7/2015
  * added goal
  * added transient flag to datasets

* 7/6/2015
  * added size check in taskParam copy from DEFT

* 6/26/2015
  * added 50% of safety mergin to cpuTime
  * added more message for input file shortage
  * fixed maxWalltime for CPU efficiency
  * added stayOutputOnSite

* 6/24/2015
  * decomposed INSERT+SELECT to copy task params from DEFT
  * changed tgtNumEventsPerJob to ignore file boundaries

* 6/23/2015
  * added reactivateTasks for high prio tasks
  * reduced delay for reassignTask
  * added traceback to dumpErrorMessage

* 6/22/2015
  * improved HS06sPerEvents

* 6/19/2015
  * fixed resolveGOC in AtlasDDMClient

* 6/18/2015
  * changed to allow to set workDiskUnit
  * added a special role to outDiskCount=-1
  * fixed getTasksToExecCommand_JEDI for concurrent updates

* 6/15/2015
  * extened workQueue to allow site as a param
  * using always closed state for containers

* 6/11/2015
  * added tgtNumEventsPerJob
  * improved performance of file lookup

* 6/10/2015
  * adding offset in walltime estimation with HS06